# sakura

./: Cargo.toml  README.md  schedule.sql
src/: cli.yml  lib.rs  main.rs
src/db/: mod.rs
