[package]
name = "sakura"
version = "0.1.0"
authors = ["Jake Correnti <jcorrenti13@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "~2.27.0"
features = ["yaml"]

[dependencies.chrono]
version = "0.4.19"
